--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
             </li>
             <li>
                 <img src="./img/computador.png" alt="Ícone de computador">
-                <h3 class="lista__item">computador</h3>
+                <h3 class="lista__item">Computadores</h3>
             </li>
             <li>
                 <img src="./img/celular.png" alt="Ícone de Celular">
-                <h3 class="lista__item">Celular</h3>
+                <h3 class="lista__item">Celulares e Tablets</h3>
             </li>
         </ul>
     </secion>
