--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
     </section>
 
-    <secion class="dispositivos">
+    <section class="dispositivos">
         <h2 class="dispositivos__titulo">Disponivel nos seus dispositivos favoritos</h2>
         <ul class="dispositivos__lista">
             <li>
@@ -68,7 +68,7 @@
                 <h3 class="lista__item">Celulares e Tablets</h3>
             </li>
         </ul>
-    </secion>
+    </section>
 
     <footer class="rodape">
         <img src="./img/Logo.png" alt="Alura+" class="rodape__logo">
